--- a/estilos.css
+++ b/estilos.css
@@ -119,4 +119,44 @@
 		cursor: pointer;
 		font-size: 18px;
 	}
+	.resolucion {
+		width: 99%;
+		text-align: center;
+	}
+	
+	
+	/**Movil**/
+	
+	@media (max-width: 551px) {
+		.desktop {
+			display: none;
+		}
+		.tablet {
+			display: none;
+		}
+	}
+	
+	
+	/**Tablet**/
+	
+	@media (min-width: 768px) and (max-width: 990px) {
+		.desktop {
+			display: none;
+		}
+		.movil {
+			display: none;
+		}
+	}
+	
+	
+	/**Escritorio**/
+	
+	@media (min-width: 551px) {
+		.tablet {
+			display: none;
+		}
+		.movil {
+			display: none;
+		}
+	}
 	/*Fin de Menù lateral*/
