--- a/estilos.css
+++ b/estilos.css
@@ -6,7 +6,7 @@
 		font-family: 'Montserrat Alternates', sans-serif;
 	}
 	body{
-		background: url(https://i.pinimg.com/originals/cf/59/d1/cf59d112023132c6d75605e47f12f6c9.jpg);
+		background: rgb(3, 3, 90);
 		background-size: 100vw 100vh;
 		background-repeat: no-repeat;
 	}
